Replaced deprecated constructor